--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "axios": "^0.19.2",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
