--- a/backend/api/applicant/models/applicant.settings.json
+++ b/backend/api/applicant/models/applicant.settings.json
@@ -50,6 +50,11 @@
       "type": "component",
       "repeatable": true,
       "component": "skills.skills"
+    },
+    "Adress": {
+      "type": "component",
+      "repeatable": false,
+      "component": "adresse.adresse"
     }
   }
 }
